# alfred-eudic-workflow

./: .gitignore  Cargo.toml  Makefile  README.md  info.plist
docs/superpowers/plans/: 2026-05-16-multi-source-lookup.md  2026-05-18-rich-dictionary-card.md
docs/superpowers/specs/: 2026-05-16-multi-source-lookup-design.md  2026-05-18-rich-dictionary-card-design.md
script/: search_eudic.sh  speak_eudic.sh
src/: card.rs  http.rs  lib.rs  main.rs  preview.rs  render.rs
src/cache/: mod.rs  sqlite.rs
src/command/: card_update.rs  mod.rs  search.rs
src/dictionary/: database.rs  manager.rs  mod.rs
src/llm/: mod.rs  prompt.rs  response.rs
src/sources/: datamuse.rs  freedict.rs  mod.rs  mw.rs  urban.rs  util.rs  wikipedia.rs  wiktionary.rs  wordnik.rs  youdao.rs
tests/: card_integration.rs  search_integration.rs
