[package]
name = "alfred-eudic"
version = "0.1.0"
edition = "2024"
description = "Alfred workflow for Eudic dictionary search"

[lib]
name = "alfred_eudic"
path = "src/lib.rs"

[[bin]]
name = "alfred-eudic"
path = "src/main.rs"

[dependencies]
alfred = { git = "https://github.com/hanleylee/alfred-workflow-utils.git", tag = "0.0.5", features = ["script-filter", "updater", "updater-cli"] }
#alfred = { path = "../alfred-workflow-utils/alfred", features = ["script-filter", "updater", "updater-cli"] }
clap = { version = "4", features = ["env", "derive"] }
rusqlite = { version = "0.32", features = ["bundled"] }
tokio = { version = "1", features = ["fs", "rt-multi-thread", "macros", "time", "sync"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
async-trait = "0.1"
once_cell = "1"

[dev-dependencies]
wiremock = "0.6"
tempfile = "3"
tokio = { version = "1", features = ["test-util"] }
